[UPDATE] Import additional SCSS modules for room, homepage, and authentication styles

--- a/frontend/scss/frontend.scss
+++ b/frontend/scss/frontend.scss
@@ -1,3 +1,6 @@
 @use "./variables" as *;
 @use "./navbar" as *;
 @use "./pages" as *;
+@use "./room" as *;
+@use "./homepage" as *;
+@use "./auth" as *;
