--- a/mobile/scss/_controller.scss
+++ b/mobile/scss/_controller.scss
@@ -37,13 +37,15 @@ $transition-speed: 0.2s;
     font-size: 2rem;
     text-align: center;
     margin: 0 5px;
-    border: 2px solid $border-color;
+    border: 2px solid $primary-color;
     border-radius: $border-radius;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 123, 255, 0.15);
+    color: #ffffff;
     transition: border-color $transition-speed ease;
 
     &:focus {
       border-color: $primary-color;
+      background-color: rgba(0, 123, 255, 0.25);
       outline: none;
     }
   }
@@ -60,13 +62,15 @@ $transition-speed: 0.2s;
     font-size: 1.8rem;
     text-align: center;
     margin: 0 5px;
-    border: 2px solid $border-color;
+    border: 2px solid $primary-color;
     border-radius: $border-radius;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 123, 255, 0.15);
+    color: #ffffff;
     transition: border-color $transition-speed ease;
 
     &:focus {
       border-color: $primary-color;
+      background-color: rgba(0, 123, 255, 0.25);
       outline: none;
     }
   }
